--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" viewport-fit="cover" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Software Developer working at Widen" />
+    <meta name="title" content="Destin Lee - Software Developer" />
+    <meta
+      name="description"
+      content="Experienced web developer with a passion for accessibility and dynamic design. Find me on Github, Twitter, and Instagram"
+    />
+    <meta
+      name="keywords"
+      content="software developer, software engineer, widen, madison wi, madison, react, css, typescript, javascript, github, destin, lee, destin lee"
+    />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@coderdestin" />
+    <meta name="twitter:title" content="Destin Lee - Software Developer" />
+    <meta
+      name="twitter:description"
+      content="Experienced web developer with a passion for accessibility and dynamic design. Find me on Github, Twitter, and Instagram"
+    />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Destin Lee" />
+
+    <!-- <link rel="canonical" rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="canonical" rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="canonical" rel="manifest" href="/site.webmanifest" /> -->
+
+    <script async src="https://static.getclicky.com/101326279.js" defer></script>
+
+    <title>Destin Lee - Software Developer</title>
     <script src="index.js" type="module"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
   </head>
   <body>
     <div id="stars"></div>
+    <div id="content" class="content">
+      <h1>Destin Lee.</h1>
+      <nav>
+        <a class="github" href="https://github.com/destinio"> GitHub </a>
+        <a class="codepen" href="https://codepen.io/destinio" color="#FFDD41"> Codepen </a>
+        <a class="npm" href="https://www.npmjs.com/~destinio"> NPM </a>
+        <a class="linkedin" href="https://www.linkedin.com/in/destinlee/" color="#4c95de">
+          LinkedIn
+        </a>
+      </nav>
+      <blockquote>
+        <span>Strive not to be a success, but rather to be of value.</span>
+        <span>-- Albert Einstein</span>
+      </blockquote>
+    </div>
   </body>
 </html>
